fix DOM cells & menu & cell overlap
adjusted menu height to prevent overlapping with cells and disallowing changing color upon click

deleted double DOM addition(insert cell already appends child)

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
 	margin: auto;
   margin-top: 10px;
 	text-align: center;
-	height: 150px;
+	height: 50px;
 	/*fixed menu top screen*/
 	position: fixed;
 	width: 100%;
@@ -20,7 +20,7 @@ table {
   text-align: center;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 40px;
+  margin-top: 50px;
 } 
 
 td {
